conformance/tests/mesh/grpcroute-request-mirror.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: mesh-grpc-request-mirror
  namespace: gateway-conformance-mesh
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: echo
    port: 7070
  rules:
  - matches:
    - headers:
      - name: x-mirror-only
        value: "true"
    filters:
    - type: RequestMirror
      requestMirror:
        backendRef:
          name: echo-v2
          port: 7070
    backendRefs:
    - name: echo-v1
      port: 7070
  - matches:
    - headers:
      - name: x-mirror-and-modify
        value: "true"
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: X-Header-Set
          value: set-overwrites-values
        add:
        - name: X-Header-Add
          value: header-val-1
        - name: X-Header-Add-Append
          value: header-val-2
        remove:
        - X-Header-Remove
    - type: RequestMirror
      requestMirror:
        backendRef:
          name: echo-v2
          port: 7070
    backendRefs:
    - name: echo-v1
      port: 7070
