conformance/tests/mesh/httproute-additional-redirect-host-and-status.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mesh-additional-redirect-host-and-status
  namespace: gateway-conformance-mesh
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: echo
    port: 80
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /host-and-status-temporary
    filters:
    - type: RequestRedirect
      requestRedirect:
        statusCode: 307
        hostname: example.org
  - matches:
    - path:
        type: PathPrefix
        value: /host-and-status-permanent
    filters:
    - type: RequestRedirect
      requestRedirect:
        statusCode: 308
        hostname: example.org
