conformance/tests/mesh/httproute-matching.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mesh-matching
  namespace: gateway-conformance-mesh
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: echo
    port: 80
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    - headers:
      - name: version
        value: one
    backendRefs:
    - name: echo-v1
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /v2
    - headers:
      - name: version
        value: two
    backendRefs:
    - name: echo-v2
      port: 8080
