conformance/tests/mesh/httproute-named-rule.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mesh-http-named-rules
  namespace: gateway-conformance-mesh
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: echo
    port: 80
  rules:
  - name: named-rule
    matches:
    - path:
        type: PathPrefix
        value: /named
    backendRefs:
    - name: echo-v1
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /unnamed
    backendRefs:
    - name: echo-v2
      port: 8080
