conformance/tests/mesh/httproute-weight.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mesh-weighted-backends
  namespace: gateway-conformance-mesh
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: echo
    port: 80
  rules:
  - backendRefs:
    - name: echo-v1
      port: 8080
      weight: 70
    - name: echo-v2
      port: 8080
      weight: 30
