conformance/tests/mesh/mesh-consumer-route.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mesh-echo-add-header
  namespace: gateway-conformance-mesh-consumer
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: echo-v1
    namespace: gateway-conformance-mesh
  rules:
  - filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        set:
        - name: X-Header-Set
          value: set
    backendRefs:
    - name: echo-v1
      namespace: gateway-conformance-mesh
      port: 80
