conformance/tests/mesh/mesh-frontend.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mesh-split-v1
  namespace: gateway-conformance-mesh
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: echo-v2
  rules:
  - filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        set:
        - name: X-Header-Set
          value: set
    backendRefs:
    - name: echo-v2
      port: 80
